<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shapes</string>

    <string name="triangle">Triangle</string>
    <string name="oval">Oval</string>
    <string name="rectangle">Rectangle</string>
    <string name="picture">Picture</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="delete">Delete</string>
    <string name="rationale_ask_again">Open Settings, then tap Permissions and turn on Storage.</string>
    <string name="title_settings_dialog" translatable="false"></string>
    <string name="cant_undo">Cant undo</string>
    <string name="cant_redo">Cant redo</string>
    <string name="cant_exec">Cant execute command</string>
    <string name="cant_history">Cant save to history</string>

</resources>
