<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/action_triangle"
            android:icon="@drawable/triangle"
            android:title="@string/triangle"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_oval"
            android:icon="@drawable/oval"
            android:title="@string/oval"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_rectangle"
            android:icon="@drawable/rectangle"
            android:title="@string/rectangle"
            app:showAsAction="always" />
        <item
            android:id="@+id/action_picture"
            android:icon="@drawable/photo_48px"
            android:title="@string/picture"
            app:showAsAction="always" />
    </group>
    <group>
        <item
            android:id="@+id/action_undo"
            android:icon="@drawable/ic_undo_white_48dp"
            android:title="@string/undo"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_redo"
            android:icon="@drawable/ic_redo_white_48dp"
            android:title="@string/redo"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_delete"
            android:icon="@drawable/ic_delete_sweep_white_48dp"
            android:title="@string/delete"
            app:showAsAction="ifRoom" />
    </group>
</menu>
